--- a/oyostate.html
+++ b/oyostate.html
@@ -201,16 +201,16 @@
                                 class="w-full h-full object-cover" />
                         </div>
                         <div class="p-4 space-y-2">
-                            <h2 class="text-xl font-bold">Hill Station Hotel</h2>
+                            <h2 class="text-xl font-bold">Sen. Rasheed Ladoja Circular Road</h2>
                             <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
                                 <div>Sector:</div>
-                                <div>hospitality </div>
+                                <div>Infrastructure </div>
                                 <div>Project Status:</div>
-                                <div>Implementation</div>
+                                <div>Operation</div>
                                 <div>Project Value:</div>
-                                <div>$500M</div>
+                                <div>$103,500,000</div>
                                 <div>Investment Required:</div>
-                                <div>$250M</div>
+                                <div>$51,750,000</div>
                             </div>
                             <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
                                 <span>View Details</span>
@@ -227,16 +227,16 @@
                                 class="w-full h-full object-cover" />
                         </div>
                         <div class="p-4 space-y-2">
-                            <h2 class="text-xl font-bold">Plateau Hotel</h2>
+                            <h2 class="text-xl font-bold">Gas Power Project</h2>
                             <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
                                 <div>Sector:</div>
-                                <div>hospitality</div>
+                                <div>Oil & Gas</div>
                                 <div>Project Status:</div>
-                                <div>Implementation</div>
+                                <div>Planning</div>
                                 <div>Project Value:</div>
-                                <div>$5.5M</div>
+                                <div>$100,000,000</div>
                                 <div>Investment Required:</div>
-                                <div>$2.750M</div>
+                                <div>$50,000,000</div>
                             </div>
                             <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
                                 <span>View Details</span>
@@ -253,16 +253,16 @@
                                 class="w-full h-full object-cover" />
                         </div>
                         <div class="p-4 space-y-2">
-                            <h2 class="text-xl font-bold">Community Energy Social Enterprises Ltd</h2>
+                            <h2 class="text-xl font-bold">Pacesetter Asphalt Plant and Quarry</h2>
                             <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
                                 <div>Sector:</div>
-                                <div>Energy</div>
+                                <div>Infrastructure</div>
                                 <div>Project Status:</div>
-                                <div>Planning</div>
+                                <div>Operation</div>
                                 <div>Project Value:</div>
-                                <div>$3.5M</div>
+                                <div>$2.3M</div>
                                 <div>Investment Required:</div>
-                                <div>$1.750M</div>
+                                <div>$1.150M</div>
                             </div>
                             <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
                                 <span>View Details</span>
@@ -271,7 +271,7 @@
                         </div>
                     </div>
 
-                     <!-- Card 2 -->
+                     <!-- Card 4 -->
                      <div
                      class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
                      <div class="aspect-[4/3] overflow-hidden">
@@ -279,16 +279,16 @@
                              class="w-full h-full object-cover" />
                      </div>
                      <div class="p-4 space-y-2">
-                         <h2 class="text-xl font-bold">Quaint Power & Infrastructure Limited</h2>
+                         <h2 class="text-xl font-bold">Aviation Fuel Depot</h2>
                          <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
                              <div>Sector:</div>
-                             <div>Energy</div>
+                             <div>Aviation</div>
                              <div>Project Status:</div>
-                             <div>Initiation</div>
+                             <div>Operation</div>
                              <div>Project Value:</div>
-                             <div>$300M</div>
+                             <div>$1.6M</div>
                              <div>Investment Required:</div>
-                             <div>$1.50M</div>
+                             <div>$800,000</div>
                          </div>
                          <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
                              <span>View Details</span>
@@ -297,7 +297,7 @@
                      </div>
                  </div>
 
-                 <!-- Card 3 -->
+                 <!-- Card 5 -->
                  <div
                      class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-all duration-300">
                      <div class="aspect-[4/3] overflow-hidden">
@@ -305,16 +305,16 @@
                              class="w-full h-full object-cover" />
                      </div>
                      <div class="p-4 space-y-2">
-                         <h2 class="text-xl font-bold">Shiagaya Agri Limited</h2>
+                         <h2 class="text-xl font-bold">Fasola Agribusiness Hub</h2>
                          <div class="grid grid-cols-2 gap-1 text-gray-700 text-sm">
                              <div>Sector:</div>
                              <div>Agriculture</div>
                              <div>Project Status:</div>
-                             <div>Implementation</div>
+                             <div>Operation</div>
                              <div>Project Value:</div>
-                             <div>$12.5M</div>
+                             <div>$2.4M</div>
                              <div>Investment Required:</div>
-                             <div>$6.250M</div>
+                             <div>$1.2M</div>
                          </div>
                          <!-- <button class="flex items-center gap-2 text-[#2D7C59] hover:underline mt-3">
                              <span>View Details</span>
