--- a/oyostate.html
+++ b/oyostate.html
@@ -20,9 +20,9 @@
                     <nav class="space-x-6">
                         <a href="./home.html" class="text-gray-700 hover:text-green-600">Home</a>
                         <a href="./ExploreState.html" class="text-gray-700 hover:text-green-600">Explore States</a>
-                        <a href="/" class="text-gray-700 hover:text-green-600">Analytics</a>
-                        <a href="/" class="text-gray-700 hover:text-green-600">Downloads</a>
-                        <a href="/" class="text-gray-700 hover:text-green-600">Contact</a>
+                        <a href="." class="text-gray-700 hover:text-green-600">Analytics</a>
+                        <a href="./Download.html" class="text-gray-700 hover:text-green-600">Downloads</a>
+                        <a href="./" class="text-gray-700 hover:text-green-600">Contact</a>
                     </nav>
                 </div>
                 <div class="relative space-x-4">
