--- a/signin.html
+++ b/signin.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-     <div class="flex items-center flex-col justify-center h-[100vh] w-[300px] overflow-x-hidden mx-auto">
-                <h1 class="text-center text-black font-bold text-3xl py-2">Logo</h1>
-                <h3 class="font-bold text-xl py-3">Welcome Back, Sign In</h3>
-                <form action="" method="POST" class="w-full mt-4 space-y-2">
-                    <div class="flex flex-col space-y-2">
-                        <p>Email address</p>
-                        <input class="border-2 p-2 rounded-md" type="text" placeholder="Enter your email address" required />
-                    </div>
-                    <div class="flex flex-col space-y-2">
-                        <p>Password</p>
-                        <input class="border-2 p-2 rounded-md w-full" type="email" placeholder="***************" required />
-                    </div>  
-                    <div class="text-right font-bold">
-                        <a href="./forgot-password">Forgot Password?</a>
-                    </div>
-                    <button class="text-center bg-[#2D7C59] mt-6 text-white p-2 w-full rounded-md hover:bg-green-900 hover:cursor-pointer">
-                        <span>SignIn</span>
-                    </button>
-                </form>
-                <div class="mt-8">
-                    <p>Don't have an account? 
-                        <a class="ml-1 text-black font-bold" href="./signup.html">Sign Up</a>
-                    </p>
-                </div>
-            </div>
+  </head>
+  <body>
+    <div
+      class="flex items-center flex-col justify-center h-[100vh] w-[300px] overflow-x-hidden mx-auto"
+    >
+      <h1 class="text-center text-black font-bold text-3xl py-2">Logo</h1>
+      <h3 class="font-bold text-xl py-3">Welcome Back, Sign In</h3>
+      <form action="" method="POST" class="w-full mt-4 space-y-2">
+        <div class="flex flex-col space-y-2">
+          <p>Email address</p>
+          <input
+            class="border-2 p-2 rounded-md"
+            type="text"
+            placeholder="Enter your email address"
+            required
+          />
+        </div>
+        <div class="flex flex-col space-y-2">
+          <p>Password</p>
+          <input
+            class="border-2 p-2 rounded-md w-full"
+            type="email"
+            placeholder="***************"
+            required
+          />
+        </div>
+        <div class="text-right font-bold">
+          <a href="./resetpassword.html">Forgot Password?</a>
+        </div>
+        <button
+          class="text-center bg-[#2D7C59] mt-6 text-white p-2 w-full rounded-md hover:bg-green-900 hover:cursor-pointer"
+        >
+          <span>SignIn</span>
+        </button>
+      </form>
+      <div class="mt-8">
+        <p>
+          Don't have an account?
+          <a class="ml-1 text-black font-bold" href="./signup.html">Sign Up</a>
+        </p>
+      </div>
+    </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  </body>
 </html>
