--- a/signup.html
+++ b/signup.html
@@ -1,100 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
-</head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
+  </head>
 
-<body>
-
-    <div class="min-h-screen flex items-center justify-center bg-gray-50 px-4 py-5">
-        <div class="w-full max-w-md bg-white shadow-lg rounded-2xl p-8 space-y-6">
-            <!-- Logo -->
-            <div class="flex justify-center">
-                <img src="./assets/logo.png" alt="Logo" class="h-14 w-auto" />
-            </div>
-
-            <!-- Title -->
-            <h3 class="text-center text-2xl font-bold text-gray-800">
-                Register a New Vendor Account
-            </h3>
-
-            <!-- Form -->
-            <form action="" method="POST" class="space-y-4">
-                <!-- Full Name -->
-                <div>
-                    <label class="block text-sm font-medium text-gray-600 mb-1">Full Name</label>
-                    <input type="text" placeholder="Enter your first and last name"
-                        class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-green-600 focus:outline-none"
-                        required />
-                </div>
-
-                <!-- Email -->
-                <div>
-                    <label class="block text-sm font-medium text-gray-600 mb-1">Email Address</label>
-                    <input type="email" placeholder="Enter your email address"
-                        class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-green-600 focus:outline-none"
-                        required />
-                </div>
-
-                <!-- Password -->
-                <div>
-                    <label class="block text-sm font-medium text-gray-600 mb-1">Password</label>
-                    <div class="flex items-center border border-gray-300 rounded-lg px-3">
-                        <input type="password" placeholder="**************" class="w-full p-3 focus:outline-none"
-                            required />
-                        <button type="button" class="text-gray-500 hover:text-gray-700">
-                            <i class="fa fa-eye"></i>
-                        </button>
-                    </div>
-                </div>
-
-                <!-- Password Rules -->
-                <div class="grid grid-cols-2 gap-2 text-xs">
-                    <div class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1">
-                        <i class="fa fa-check text-green-600"></i>
-                        <span>Uppercase</span>
-                    </div>
-                    <div class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1">
-                        <i class="fa fa-check text-green-600"></i>
-                        <span>Lowercase</span>
-                    </div>
-                    <div class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1">
-                        <i class="fa fa-times text-red-500"></i>
-                        <span>Number</span>
-                    </div>
-                    <div class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1">
-                        <i class="fa fa-times text-red-500"></i>
-                        <span>8 Characters</span>
-                    </div>
-                    <div
-                        class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1 col-span-2 sm:col-span-1">
-                        <i class="fa fa-times text-red-500"></i>
-                        <span>Special Character</span>
-                    </div>
-                </div>
-
-                <!-- Submit Button -->
-                <button type="submit"
-                    class="w-full bg-green-700 text-white font-medium py-3 rounded-lg hover:bg-green-800 transition duration-300">
-                    Continue
-                </button>
-            </form>
-
-            <!-- Login Link -->
-            <p class="text-center text-sm text-gray-600 mt-4">
-                Already have an account?
-                <a href="/login" class="font-semibold text-green-700 hover:text-green-900">Login</a>
-            </p>
+  <body>
+    <div
+      class="min-h-screen flex items-center justify-center bg-gray-50 px-4 py-5"
+    >
+      <div class="w-full max-w-md bg-white shadow-lg rounded-2xl p-8 space-y-6">
+        <!-- Logo -->
+        <div class="flex justify-center">
+          <img src="./assets/logo.png" alt="Logo" class="h-14 w-auto" />
         </div>
+
+        <!-- Title -->
+        <h3 class="text-center text-2xl font-bold text-gray-800">
+          Register a New Vendor Account
+        </h3>
+
+        <!-- Form -->
+        <form action="" method="POST" class="space-y-4">
+          <!-- Full Name -->
+          <div>
+            <label class="block text-sm font-medium text-gray-600 mb-1"
+              >Full Name</label
+            >
+            <input
+              type="text"
+              placeholder="Enter your first and last name"
+              class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-green-600 focus:outline-none"
+              required
+            />
+          </div>
+
+          <!-- Email -->
+          <div>
+            <label class="block text-sm font-medium text-gray-600 mb-1"
+              >Email Address</label
+            >
+            <input
+              type="email"
+              placeholder="Enter your email address"
+              class="w-full border border-gray-300 rounded-lg p-3 focus:ring-2 focus:ring-green-600 focus:outline-none"
+              required
+            />
+          </div>
+
+          <!-- Password -->
+          <div>
+            <label class="block text-sm font-medium text-gray-600 mb-1"
+              >Password</label
+            >
+            <div
+              class="flex items-center border border-gray-300 rounded-lg px-3"
+            >
+              <input
+                type="password"
+                placeholder="**************"
+                class="w-full p-3 focus:outline-none"
+                required
+              />
+              <button type="button" class="text-gray-500 hover:text-gray-700">
+                <i class="fa fa-eye"></i>
+              </button>
+            </div>
+          </div>
+
+          <!-- Password Rules -->
+          <div class="grid grid-cols-2 gap-2 text-xs">
+            <div
+              class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1"
+            >
+              <i class="fa fa-check text-green-600"></i>
+              <span>Uppercase</span>
+            </div>
+            <div
+              class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1"
+            >
+              <i class="fa fa-check text-green-600"></i>
+              <span>Lowercase</span>
+            </div>
+            <div
+              class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1"
+            >
+              <i class="fa fa-times text-red-500"></i>
+              <span>Number</span>
+            </div>
+            <div
+              class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1"
+            >
+              <i class="fa fa-times text-red-500"></i>
+              <span>8 Characters</span>
+            </div>
+            <div
+              class="flex items-center space-x-1 border border-gray-300 rounded-full px-2 py-1 col-span-2 sm:col-span-1"
+            >
+              <i class="fa fa-times text-red-500"></i>
+              <span>Special Character</span>
+            </div>
+          </div>
+
+          <!-- Submit Button -->
+          <button
+            type="submit"
+            class="w-full bg-green-700 text-white font-medium py-3 rounded-lg hover:bg-green-800 transition duration-300"
+          >
+            Continue
+          </button>
+        </form>
+
+        <!-- Login Link -->
+        <p class="text-center text-sm text-gray-600 mt-4">
+          Already have an account?
+          <a
+            href="./signin.html"
+            class="font-semibold text-green-700 hover:text-green-900"
+            >Login</a
+          >
+        </p>
+      </div>
     </div>
 
-
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</body>
-
+  </body>
 </html>
