--- a/Download.html
+++ b/Download.html
@@ -1,200 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="relative w-[94%] mx-auto">
-    <header class="relative p-6 px-0">
+      <header class="relative p-6 px-0">
         <div class="flex items-center justify-between">
-            <div>
-                <img src="./assets/Logo.png" alt="Logo" class="h-[30px]">
-            </div>
-            <div>
-                <nav class="space-x-6">
-                    <a href="./home.html" class="text-gray-700 hover:text-green-600">Home</a>
-                    <a href="./ExploreState.html" class="text-gray-700 hover:text-green-600">Explore States</a>
-                    <a href="./" class="text-gray-700 hover:text-green-600">Analytics</a>
-                    <a href="./Download.html" class="text-gray-700 hover:text-green-600">Downloads</a>
-                    <a href="./ContactInvestmentDesk.html" class="text-gray-700 hover:text-green-600">Contact</a>
-                </nav>
-            </div>
-            <div class="relative space-x-4">
-                <a href="./signin.html">
-                    <button class="border-2 p-2 px-6 text-gray-700 hover:bg-gray-100">
-                        <span>Login</span>
-                    </button>
-                </a>
-                <a href="./signup.html">
-                    <button class="p-2 px-6 bg-[#2D7C59] hover:bg-white hover:border-[#2D7C59] hover:text-black transition-all duration-300 cursor-pointer text-white border-2 border-[#2D7C59]">
-                        <span>Register</span>
-                    </button>
-                </a>
-            </div>
+          <div>
+            <img src="./assets/Logo.png" alt="Logo" class="h-[30px]" />
+          </div>
+          <div>
+            <nav class="space-x-6">
+              <a href="./home.html" class="text-gray-700 hover:text-green-600"
+                >Home</a
+              >
+              <a
+                href="./ExploreState.html"
+                class="text-gray-700 hover:text-green-600"
+                >Explore States</a
+              >
+              <a
+                href="./NigeriaInvestment.html"
+                class="text-gray-700 hover:text-green-600"
+                >Analytics</a
+              >
+              <a
+                href="./Download.html"
+                class="text-gray-700 hover:text-green-600"
+                >Downloads</a
+              >
+              <a
+                href="./ContactInvestmentDesk.html"
+                class="text-gray-700 hover:text-green-600"
+                >Contact</a
+              >
+            </nav>
+          </div>
+          <div class="relative space-x-4">
+            <a href="./signin.html">
+              <button class="border-2 p-2 px-6 text-gray-700 hover:bg-gray-100">
+                <span>Login</span>
+              </button>
+            </a>
+            <a href="./signup.html">
+              <button
+                class="p-2 px-6 bg-[#2D7C59] hover:bg-white hover:border-[#2D7C59] hover:text-black transition-all duration-300 cursor-pointer text-white border-2 border-[#2D7C59]"
+              >
+                <span>Register</span>
+              </button>
+            </a>
+          </div>
         </div>
-    </header>
-    <main class="mb-18">
+      </header>
+      <main class="mb-18">
         <section class="space-y-8">
-            <h1 class="text-3xl font-bold w-[400px]">Downloads</h1>
-            <p class="text-lg w-[550px]">Access all reports across different sector and investment Guides</p>
+          <h1 class="text-3xl font-bold w-[400px]">Downloads</h1>
+          <p class="text-lg w-[550px]">
+            Access all reports across different sector and investment Guides
+          </p>
 
-            <div class="border flex items-center">
-                <i class="fa fa-search p-2"></i>
-                <input type="search" class="p-2 ml-2 w-full focus:outline-none" placeholder="Search by State Name" />
-            </div>
+          <div class="border flex items-center">
+            <i class="fa fa-search p-2"></i>
+            <input
+              type="search"
+              class="p-2 ml-2 w-full focus:outline-none"
+              placeholder="Search by State Name"
+            />
+          </div>
         </section>
 
         <section>
-            <div class="mt-8">
-                <h1 class="font-bold text-xl">Filter by sector</h1>
+          <div class="mt-8">
+            <h1 class="font-bold text-xl">Filter by sector</h1>
 
-                <div class="mt-2 flex space-x-2">
-                    <button class="p-2 px-8 border">
-                        <span>All</span>
-                    </button>
-                    <button class="p-2 border">
-                        <span>Investment Reports</span>
-                    </button>
-                    <button class="p-2 border">
-                        <span>Sector Insights</span>
-                    </button>
-                    <button class="p-2 border">
-                        <span>Government Guides</span>
-                    </button>
-                    <button class="p-2 border">
-                        <span>Brochures</span>
-                    </button>
-                </div>
+            <div class="mt-2 flex space-x-2">
+              <button class="p-2 px-8 border">
+                <span>All</span>
+              </button>
+              <button class="p-2 border">
+                <span>Investment Reports</span>
+              </button>
+              <button class="p-2 border">
+                <span>Sector Insights</span>
+              </button>
+              <button class="p-2 border">
+                <span>Government Guides</span>
+              </button>
+              <button class="p-2 border">
+                <span>Brochures</span>
+              </button>
             </div>
+          </div>
         </section>
 
         <section>
-            <div class="flex items-center justify-between mt-8">
-                <div class="space-y-4">
-                    <img src="path/to/your/image.png" alt="Nigeria Investment Report 2025" class="h-24">
-                    <p class="font-bold">Nigeria Investment Report 2025</p>
-                    <p>An overview of investment opportunities</p>
-                </div>
-                <button class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center">
-                    <span>Download</span>
-                    <i class="fa fa-download ml-2"></i>
-                </button>
+          <div class="flex items-center justify-between mt-8">
+            <div class="space-y-4">
+              <img
+                src="path/to/your/image.png"
+                alt="Nigeria Investment Report 2025"
+                class="h-24"
+              />
+              <p class="font-bold">Nigeria Investment Report 2025</p>
+              <p>An overview of investment opportunities</p>
             </div>
+            <button
+              class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center"
+            >
+              <span>Download</span>
+              <i class="fa fa-download ml-2"></i>
+            </button>
+          </div>
 
-            <div class="flex items-center justify-between mt-8">
-                <div class="space-y-4">
-                    <img src="path/to/your/image.png" alt="Agriculture Sector Insights" class="h-24">
-                    <p class="font-bold">Agriculture Sector Insights</p>
-                    <p>In depth analysis of the agriculture sector, highlighting opportunities and challenge</p>
-                </div>
-                <button class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center">
-                    <span>Download</span>
-                    <i class="fa fa-download ml-2"></i>
-                </button>
+          <div class="flex items-center justify-between mt-8">
+            <div class="space-y-4">
+              <img
+                src="path/to/your/image.png"
+                alt="Agriculture Sector Insights"
+                class="h-24"
+              />
+              <p class="font-bold">Agriculture Sector Insights</p>
+              <p>
+                In depth analysis of the agriculture sector, highlighting
+                opportunities and challenge
+              </p>
             </div>
+            <button
+              class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center"
+            >
+              <span>Download</span>
+              <i class="fa fa-download ml-2"></i>
+            </button>
+          </div>
 
-            <div class="flex items-center justify-between mt-8">
-                <div class="space-y-4">
-                    <img src="path/to/your/image.png" alt="Nigeria Investment Report 2025" class="h-24">
-                    <p class="font-bold">Nigeria Investment Report 2025</p>
-                    <p>An overview of the investment opportunities</p>
-                </div>
-                <button class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center">
-                    <span>Download</span>
-                    <i class="fa fa-download ml-2"></i>
-                </button>
+          <div class="flex items-center justify-between mt-8">
+            <div class="space-y-4">
+              <img
+                src="path/to/your/image.png"
+                alt="Nigeria Investment Report 2025"
+                class="h-24"
+              />
+              <p class="font-bold">Nigeria Investment Report 2025</p>
+              <p>An overview of the investment opportunities</p>
             </div>
+            <button
+              class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center"
+            >
+              <span>Download</span>
+              <i class="fa fa-download ml-2"></i>
+            </button>
+          </div>
 
-            <div class="flex items-center justify-between mt-8">
-                <div class="space-y-4">
-                    <img src="path/to/your/image.png" alt="Agriculture Sector Insights" class="h-24">
-                    <p class="font-bold">Agriculture Sector Insights</p>
-                    <p>In depth analysis of the Agriculture sector, highlighting opportunities and challenge</p>
-                </div>
-                <button class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center">
-                    <span>Download</span>
-                    <i class="fa fa-download ml-2"></i>
-                </button>
+          <div class="flex items-center justify-between mt-8">
+            <div class="space-y-4">
+              <img
+                src="path/to/your/image.png"
+                alt="Agriculture Sector Insights"
+                class="h-24"
+              />
+              <p class="font-bold">Agriculture Sector Insights</p>
+              <p>
+                In depth analysis of the Agriculture sector, highlighting
+                opportunities and challenge
+              </p>
             </div>
+            <button
+              class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center"
+            >
+              <span>Download</span>
+              <i class="fa fa-download ml-2"></i>
+            </button>
+          </div>
 
-            <div class="flex items-center justify-between mt-8">
-                <div class="space-y-4">
-                    <img src="path/to/your/image.png" alt="Agriculture Sector Insights" class="h-24">
-                    <p class="font-bold">Agriculture Sector Insights</p>
-                    <p>In depth analysis of the agriculture, highlighting opportunities and challenge</p>
-                </div>
-                <button class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center">
-                    <span>Download</span>
-                    <i class="fa fa-download ml-2"></i>
-                </button>
+          <div class="flex items-center justify-between mt-8">
+            <div class="space-y-4">
+              <img
+                src="path/to/your/image.png"
+                alt="Agriculture Sector Insights"
+                class="h-24"
+              />
+              <p class="font-bold">Agriculture Sector Insights</p>
+              <p>
+                In depth analysis of the agriculture, highlighting opportunities
+                and challenge
+              </p>
             </div>
+            <button
+              class="p-2 bg-[#2D7C59] px-8 border text-white flex items-center"
+            >
+              <span>Download</span>
+              <i class="fa fa-download ml-2"></i>
+            </button>
+          </div>
         </section>
 
         <section class="flex items-center justify-between my-12">
-            <div class="flex items-center">
-                <p>Showing 1-8 from 100</p>
-            </div>
-            <div class="flex items-center space-x-2">
-                <button class="p-2 border rounded-lg">
-                    <i class="fa fa-angle-left"></i>
-                </button>
-                <button class="p-2 border bg-[#2D7C59] text-white rounded-lg px-3">
-                    <span>1</span>
-                </button>
-                <button class="p-2 border rounded-lg px-3">
-                    <span>2</span>
-                </button>
-                <button class="p-2 border rounded-lg px-3">
-                    <span>3</span>
-                </button>
-                <button class="p-2 border rounded-lg px-3">
-                    <span>4</span>
-                </button>
-                <button class="p-2 border rounded-lg px-3">
-                    <span>5</span>
-                </button>
-                <button class="p-2 border rounded-lg">
-                    <span>...</span>
-                </button>
-                <button class="p-2 border rounded-lg">
-                    <i class="fa fa-angle-right"></i>
-                </button>
-            </div>
+          <div class="flex items-center">
+            <p>Showing 1-8 from 100</p>
+          </div>
+          <div class="flex items-center space-x-2">
+            <button class="p-2 border rounded-lg">
+              <i class="fa fa-angle-left"></i>
+            </button>
+            <button class="p-2 border bg-[#2D7C59] text-white rounded-lg px-3">
+              <span>1</span>
+            </button>
+            <button class="p-2 border rounded-lg px-3">
+              <span>2</span>
+            </button>
+            <button class="p-2 border rounded-lg px-3">
+              <span>3</span>
+            </button>
+            <button class="p-2 border rounded-lg px-3">
+              <span>4</span>
+            </button>
+            <button class="p-2 border rounded-lg px-3">
+              <span>5</span>
+            </button>
+            <button class="p-2 border rounded-lg">
+              <span>...</span>
+            </button>
+            <button class="p-2 border rounded-lg">
+              <i class="fa fa-angle-right"></i>
+            </button>
+          </div>
         </section>
-    </main>
-    <footer class="relative p-14 px-0">
+      </main>
+      <footer class="relative p-14 px-0">
         <div class="flex items-center justify-between">
-            <img src="path/to/your/logo.png" alt="Logo" class="h-12">
-            <div>
-                <h2 class="text-lg font-semibold">Quick Link</h2>
-                <nav class="space-x-3">
-                    <a href="/" class="text-gray-700 hover:text-green-600">Explore States</a>
-                    <a href="/" class="text-gray-700 hover:text-green-600">Downloads</a>
-                    <a href="/" class="text-gray-700 hover:text-green-600">Contact</a>
-                </nav>
+          <img src="path/to/your/logo.png" alt="Logo" class="h-12" />
+          <div>
+            <h2 class="text-lg font-semibold">Quick Link</h2>
+            <nav class="space-x-3">
+              <a href="/" class="text-gray-700 hover:text-green-600"
+                >Explore States</a
+              >
+              <a href="/" class="text-gray-700 hover:text-green-600"
+                >Downloads</a
+              >
+              <a href="/" class="text-gray-700 hover:text-green-600">Contact</a>
+            </nav>
+          </div>
+          <div class="space-y-2">
+            <h3 class="text-lg font-semibold">Contact info</h3>
+            <p class="text-gray-600">Example@nia.gov.ng | +234 xxx xxx xxxx</p>
+            <div class="flex items-center space-x-4">
+              <div
+                class="w-[30px] h-[30px] bg-[#E1FEE5] flex items-center justify-center"
+              >
+                <i class="fab fa-facebook text-[#2D7C59]"></i>
+              </div>
+              <div
+                class="w-[30px] h-[30px] bg-[#E1FEE5] flex items-center justify-center"
+              >
+                <i class="fab fa-twitter text-[#2D7C59]"></i>
+              </div>
+              <div
+                class="w-[30px] h-[30px] bg-[#E1FEE5] flex items-center justify-center"
+              >
+                <i class="fab fa-linkedin text-[#2D7C59]"></i>
+              </div>
             </div>
-            <div class="space-y-2">
-                <h3 class="text-lg font-semibold">Contact info</h3>
-                <p class="text-gray-600">Example@nia.gov.ng | +234 xxx xxx xxxx</p>
-                <div class="flex items-center space-x-4">
-                    <div class="w-[30px] h-[30px] bg-[#E1FEE5] flex items-center justify-center">
-                        <i class="fab fa-facebook text-[#2D7C59]"></i>
-                    </div>
-                    <div class="w-[30px] h-[30px] bg-[#E1FEE5] flex items-center justify-center">
-                        <i class="fab fa-twitter text-[#2D7C59]"></i>
-                    </div>
-                    <div class="w-[30px] h-[30px] bg-[#E1FEE5] flex items-center justify-center">
-                        <i class="fab fa-linkedin text-[#2D7C59]"></i>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
